modified code. first commit